@@ -39,3 +39,5 @@
   an existing revision.
 
 * Implemented pretor-psf --diff
+
+* pretor.toml exclude list is honored while backing up from an interact session
